2007-12-23 Jens Tkotz <jens@peino.de> 1.5.8-svn-b3

 * Update: Mail classs from Richard Heyes.

2007-12-23 Jens Tkotz <jens@peino.de> 1.5.8-svn-b2

 * Change: When a new user is added and the username is invalid,
		   the display was not sanitized for all cases.

		   Better/more detailed information from the user integrity check.

2007-12-23 Jens Tkotz <jens@peino.de> 1.5.8-svn-b1

 * Changes:
			Lots of code style
			use of gTranslate()
			Some wording changes
			Little HTML fixes, etc.

			No real code change, so this is more "breakpoint" commit.

2007-08-16 Chris Kelly <ckdake@ckdake.com> 1.5.7

 * Release: 1.5.7

2007-08-13 Jens Tkotz <jens@peino.de> 1.5.7-svn-b16

 * Fix: Better regexp for email check.

   Thanks to G2.

2007-08-12 Jens Tkotz <jens@peino.de> 1.5.7-svn-b15

 * Change: Added function to detect jhead version.
           Show a warning if version is below 2.7.
           At least for 2.0 there are known problems.

   Thanks Kevin for testing!

 * Change: Some more minor wordings.

2007-08-01 Jens Tkotz <jens@peino.de> 1.5.7-svn-b14

 * Change: LOTS of wording fixes.

  Thanks very much to Julien Elie!!

2007-07-29 Jens Tkotz <jens@peino.de> 1.5.7-svn-b13

 * Fix: It was possible to bypass the voting permission.

2007-07-15 Jens Tkotz <jens@peino.de> 1.5.7-svn-b12

 * Change: Updated PEARs Mail/mimePart.php

2007-06-28 Jens Tkotz <jens@peino.de> 1.5.7-svn-b11

 * Fix: More use of gTranslate()

2007-06-28 Jens Tkotz <jens@peino.de> 1.5.7-svn-b10

 * Change: LOTS MORE wording fixes.

  Thanks to Julien Elie

2007-06-28 Jens Tkotz <jens@peino.de> 1.5.7-svn-b9

 * Change: Manifest update.

 * Fix: Use of correct gTranslate at various places.

 * Change: Text Change for default welcome message.

2007-06-27 Jens Tkotz <jens@peino.de> 1.5.7-svn-b8

 * Change: LOTS of wording fixes.

  Thanks to Julien Elie

2007-06-16 Jens Tkotz <jens@peino.de> 1.5.7-svn-b7

 * Fix: Use of a inputfield instead of a textarea in imagemap