@@ -6,7 +6,7 @@
 // +----------------------------------------------------------------------+
 // | Copyright (c) 1997-2002 The PHP Group                                |
 // +----------------------------------------------------------------------+
-// | This source file is subject to version 2.02 of the PHP license,      |
+// | This source file is subject toversion 3.0 of the PHP license,        |
 // | that is bundled with this package in the file LICENSE, and is        |
 // | available at through the world-wide-web at                           |
 // | http://www.php.net/license/3_0.txt.                                  |
@@ -24,7 +24,7 @@
 /**
 * Decorators for dealing with parser options
 * @package XML_HTMLSax3
-* @version $Id$
+* @version Id: Decorators.php,v 1.2 2007/10/29 21:41:35 hfuecks Exp
 * @see XML_HTMLSax3::set_option
 */
 /**
