@@ -1,6 +1,10 @@
+2007-12-23 Jens Tkotz <jens@peino.de> 1.5.8-svn-b4
+
+ * Update: XML_HTMLSax3 classes. Fixed also a license issue with debian.
+
 2007-12-23 Jens Tkotz <jens@peino.de> 1.5.8-svn-b3
 
- * Update: Mail classs from Richard Heyes.
+ * Update: Mail classes from Richard Heyes.
 
 2007-12-23 Jens Tkotz <jens@peino.de> 1.5.8-svn-b2
 
